--- a/src/Components/Section/style.css
+++ b/src/Components/Section/style.css
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: justify;
   }
   #section-main .btn{
     width: 82px;
